Thu Nov 22 19:25:54 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Modules/VC9WorkspaceCreator.pm:
          Corrected generation

Thu Nov 22 15:48:54 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Modules/VC9WorkspaceCreator.pm:
          Corrected generation

Thu Nov 22 13:35:54 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/boost_date_time.mpb:
        * config/boost_filesystem.mpb:
        * config/boost_iostreams.mpb:
        * config/boost_prg_exec_monitor.mpb:
        * config/boost_program_options.mpb:
        * config/boost_regex.mpb:
        * config/boost_serialization.mpb:
        * config/boost_signals.mpb:
        * config/boost_test_exec_monitor.mpb:
        * config/boost_thread.mpb:
        * config/boost_wave.mpb:
        * config/openssl.mpb:
        * config/swig_perl.mpb:
        * config/xerces.mpb:
        * docs/README:
        * modules/VC9ProjectCreator.pm:
        * modules/VC9WorkspaceCreator.pm:
          Added support for vc9

Thu Nov 15 13:18:35 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/vc7csharp.txt:
        * docs/templates/vc7java.txt:
        * docs/templates/vc8csharp.txt:
        * docs/templates/vc8java.txt:

          Documented the AllowUnsafeBlocks template variable.

        * templates/vc7csharp.mpd:
        * templates/vc7java.mpd:
        * templates/vc8csharp.mpd:
        * templates/vc8java.mpd:

          Added the ability to set the AllowUnsafeBlocks attribute for
          csharp and java projects through the 'AllowUnsafeBlocks' template
          variable.

Tue Nov  6 13:01:54 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/Creator.pm:
        * modules/ProjectCreator.pm:
        * docs/README:
          Added support for recursive_libpaths and recursive_includes.
          These can be used like libpaths and includes, but they recursively
          add also all subdirectories to libpaths/includes. Thanks