@@ -1,3 +1,11 @@
+Tue Nov 27 12:23:48 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WorkspaceCreator.pm:
+
+          Fixed a bug in number_target_deps() where project types with
+          dependency names are not the same as file names would not be
+          numbered.
+
 Thu Nov 22 19:25:54 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * Modules/VC9WorkspaceCreator.pm:
